2020-02-29 Marek M. Cel <marekcel@marekcel.pl>

    * CGI - vectors, rotor blur, blades datum and paths
    
    * SFX - first attempt
    
    * testing utilities
    
    * WiX files and scripts



2020-02-22 Marek M. Cel <marekcel@marekcel.pl>

    * blade element method

    * time measurement



2020-02-16 Marek M. Cel <marekcel@marekcel.pl>

    * blade element method



2020-02-15 Marek M. Cel <marekcel@marekcel.pl>

    * stabilizer type as constant
    
    * blade element method
    
    * rotor test



2020-02-08 Marek M. Cel <marekcel@marekcel.pl>

    * UH-60 model according to NASA-CR-166309
    
    * fuselage downwash according to NASA-TM-84281
    
    * minor changes
    
    * numerical integration unit tests
    
    * utils unit tests templates
    
    * UH-60 main rotor downwash



2020-02-01 Marek M. Cel <marekcel@marekcel.pl>

    * unit tests reorganisation
    
    * FDM manager moved to separate module
    
    * CMake fix



2020-01-25 Marek M. Cel <marekcel@marekcel.pl>

    * blade element method

    * helicopter rotor blur

    * helicopter rotor individual blades flapping
    
    * tests (rotor, EFIS)



2020-01-18 Marek M. Cel <marekcel@marekcel.pl>

    * blade element method
    
    * FDM main modules common interface added
    
    * minor changes



2020-01-06 Marek M. Cel <marekcel@marekcel.pl>

    * rotors models
  
    * copyright notice update
    
    * minor changes



2019-12-15 Marek M. Cel <marekcel@marekcel.pl>

    * rotors models
  
    * blade element theory



2019-12-14 Marek M. Cel <marekcel@marekcel.pl>
  
    * blade element theory
    
    * temporary modified UH-60 model to evaluate blade element theory rotor model



2019-12-08 Marek M. Cel <marekcel@marekcel.pl>
  
    * pressure units

    * EADI maximum flap extension speed

    * indicated airspeed
    
    * autopilot - ARM/ALT mode switch condition
    
    * deb package scripts
    
    * autopilot - refactorization


